# async-comms-example

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform-acceptance-testing-robot-framework.yml  cmake-single-platform-unit-testing.yml
atest/: 00_Commands_Arguments.robot  01_Send_Receive_Commands.robot  AcceptanceTestSuite.robot  keywords.resource
docs/c4-models/: 1-c4_system_context.puml  2-c4_container.puml  3-c4-component-communications-receiver.puml  3-c4-component-communications-sender.puml  3-c4-component.puml
src/: CMakeLists.txt  command-manager.cpp  command-receiver.cpp  command-sender.cpp  message-connection.h  message-manager.cpp  message-receiver.cpp  message-sender.cpp
src/arguments-parser/: CMakeLists.txt
src/arguments-parser/include/arguments-parser/: arguments-parser.hpp
src/arguments-parser/src/: arguments-parser.cpp
src/command-manager/: CMakeLists.txt
src/command-manager/include/command-manager/: command-handler.hpp  command-ids.hpp  command-local-handler.hpp  command-manager.hpp  command-observer.hpp  command-remote-handler.hpp
src/command-manager/src/: command-local-handler.cpp  command-manager.cpp  command-remote-handler.cpp
src/command-manager/test/: CMakeLists.txt  test-command-local-handler.cpp  test-command-manager-recv-command.cpp  test-command-manager-send-command.cpp  test-command-manager.cpp  test-command-remote-handler.cpp
src/commands/: CMakeLists.txt
src/commands/include/commands/: commands-implementations.hpp  commands.hpp  local-command-receiver.hpp  shutdown-receiver.hpp
src/commands/src/: commands-implementations.cpp  commands.cpp
src/commands/test/: CMakeLists.txt  test-commands.cpp  test-local-commands.cpp  test-shutdown-commands.cpp
src/communications-layer/: CMakeLists.txt
src/communications-layer/include/communications-layer/: communications-layer.hpp  communications-observer.hpp  local-tcp-socket-client-transport-layer.hpp  local-tcp-socket-listener-transport-layer.hpp  slip-application-layer.hpp  slip-transport-layer.hpp  socket-application-layer.hpp  socket-transport-layer.hpp
src/communications-layer/src/: local-tcp-socket-client-transport-layer.cpp  local-tcp-socket-listener-transport-layer.cpp  slip-application-layer.cpp  slip-transport-layer.cpp  socket-application-layer.cpp  socket-transport-layer.cpp
src/communications-layer/test/: CMakeLists.txt  test-local-tcp-socket-client-transport-layer.cpp  test-local-tcp-socket-listener-transport-layer.cpp  test-slip-application-layer.cpp  test-slip-transport-layer.cpp  test-socket-transport-layer.cpp
src/event-listeners/: CMakeLists.txt
src/event-listeners/include/event-listeners/: event-listener-socket.hpp  event-listener.hpp  socket-event-listener.hpp
src/event-listeners/src/: socket-event-listener.cpp
src/event-listeners/test/: CMakeLists.txt  test-socket-event-listener.cpp
src/interactive-commands/: CMakeLists.txt
src/interactive-commands/include/interactive-commands/: interactive-commands.hpp
src/interactive-commands/src/: interactive-commands.cpp
src/interactive-console/: CMakeLists.txt
src/interactive-console/include/interactive-console/: interactive-console-command.hpp  interactive-console-observer.hpp  interactive-console.hpp
src/interactive-console/src/: interactive-console.cpp
src/interactive-console/test/: CMakeLists.txt  test-interactive-console.cpp
src/listeners/: CMakeLists.txt
src/listeners/include/listeners/: listener.hpp  local-comms-tcp-listener.hpp
src/listeners/src/: local_comms_tcp_listener.cpp
src/local-command-manager/: CMakeLists.txt
src/local-command-manager/include/local-command-manager/: local-command-manager.hpp  local-command-observer.hpp
src/local-command-manager/src/: local-command-manager.cpp
src/local-command-manager/test/: CMakeLists.txt  test-local-command-manager.cpp
src/networking/: CMakeLists.txt
src/networking/include/networking/: local-tcp-networking.hpp  networking.hpp
src/networking/src/: local-tcp-networking-client.cpp  local-tcp-networking-server.cpp
src/networking/test/: CMakeLists.txt  test-local-tcp-networking-client.cpp  test-local-tcp-networking-server.cpp
src/remote-command-manager/: CMakeLists.txt
src/remote-command-manager/include/remote-command-manager/: command-manager.hpp  remote-command-manager.hpp  remote-command-observer.hpp
src/remote-command-manager/src/: command-manager.cpp  remote-command-manager.cpp
src/remote-command-manager/test/: CMakeLists.txt  test-command-manager-recv-command.cpp  test-command-manager.cpp  test-remote-command-manager-recv-command.cpp  test-remote-command-manager.cpp
src/socket-comms/: CMakeLists.txt
src/socket-comms/include/socket-comms/: socket-comms.hpp
src/socket-comms/src/: socket-comms.cpp
src/socket-comms/test/: CMakeLists.txt  test-socket-comms.cpp
src/thread-pool/: CMakeLists.txt
src/thread-pool/include/thread-pool/: thread-pool.hpp
src/thread-pool/src/: thread-pool.cpp
src/thread-pool/test/: CMakeLists.txt  test-thread-pool.cpp
src/transport-manager/: CMakeLists.txt
src/transport-manager/include/transport-manager/: transport-manager.hpp
src/transport-manager/src/: transport-manager.cpp
src/transport-manager/test/: CMakeLists.txt  test-transport-manager.cpp
